レポートを修正
・my-opeデータセット生成時、learning.core.nlang.Nlangクラスの仕様に従い一部品詞を落とすよう修正
・他レポートへのリンクを修正

--- a/learning/prototype/better_algorithm/24-Doc2Vec-Wiki-with-scikit_learn.ipynb
+++ b/learning/prototype/better_algorithm/24-Doc2Vec-Wiki-with-scikit_learn.ipynb
@@ -18,7 +18,10 @@
     "- scikit-learnのcosine-simularityを使用して類似検索\n",
     "\n",
     "\n",
-    "昨日検証時のモデルファイルをそのまま使用しています。\n",
+    "下記レポート作成時のモデルファイルをそのまま使用しています。\n",
+    "\n",
+    "<a href=\"23-Doc2Vec-with-Wiki.ipynb\"><b>23-Doc2Vec-with-Wiki.ipynb</b></a>\n",
+    "\n",
     "\n",
     "nosetestsの質問文を使用してテストしたところ、４問中１問だけが正解、という結果に終わりました。"
    ]
@@ -40,7 +43,7 @@
     "editable": true
    },
    "source": [
-    "<a href=\"31-Wikipedia-contents-csv.ipynb\"><b>こちらの手順</b></a> にて、いったんローカルPCにCSVファイル化しておきます。"
+    "レポート <a href=\"31-Wikipedia-contents-csv.ipynb\"><b>31-Wikipedia-contents-csv.ipynb</b></a> の手順にて、いったんローカルPCにCSVファイル化しておきます。"
    ]
   },
   {
@@ -60,7 +63,7 @@
     "editable": true
    },
    "source": [
-    "<a href=\"23-Doc2Vec-with-Wiki.ipynb\"><b>こちらの手順</b></a> にて生成したDoc2Vecモデルファイルをロードして使用します。\n",
+    "レポート <a href=\"23-Doc2Vec-with-Wiki.ipynb\"><b>23-Doc2Vec-with-Wiki.ipynb</b></a> の手順にて生成したDoc2Vecモデルファイルをロードして使用します。\n",
     "\n",
     "上記手順では、Wikipedia文書のみを使用し、ボキャブラリ／単語ベクトルの生成および学習を行い、モデルをファイル保存しています。"
    ]
@@ -193,39 +196,7 @@
    },
    "outputs": [],
    "source": [
-    "import MeCab\n",
-    "import mojimoji\n",
-    "\n",
-    "class Nlang_naive:\n",
-    "    @classmethod\n",
-    "    def split(self, text):\n",
-    "        tagger = MeCab.Tagger(\"-u learning/dict/custom.dic\")\n",
-    "        tagger.parse('')  # node.surfaceを取得出来るようにするため、空文字をparseする(Python3のバグの模様)\n",
-    "        node = tagger.parseToNode(text)\n",
-    "        word_list = []\n",
-    "        while node:\n",
-    "            features = node.feature.split(\",\")\n",
-    "            pos = features[0]\n",
-    "            if pos in [\"BOS/EOS\", \"記号\"]:\n",
-    "                node = node.next\n",
-    "                continue\n",
-    "\n",
-    "            #print(features)\n",
-    "            lemma = node.feature.split(\",\")[6]\n",
-    "\n",
-    "            if lemma == \"*\":\n",
-    "                lemma = node.surface  #.decode(\"utf-8\")\n",
-    "                \n",
-    "            word_list.append(mojimoji.han_to_zen(lemma))\n",
-    "            node = node.next\n",
-    "        return \" \".join(word_list)\n",
-    "\n",
-    "    @classmethod\n",
-    "    def batch_split(self, texts):\n",
-    "        splited_texts = []\n",
-    "        for text in texts:\n",
-    "            splited_texts.append(self.split(text))\n",
-    "        return splited_texts"
+    "from learning.core.nlang import Nlang"
    ]
   },
   {
@@ -250,14 +221,15 @@
     "            文書を分かち書きしたコーパスから、\n",
     "            Doc2Vecの学習済みモデルを使用して\n",
     "            生成される類似文書ベクトル\n",
-    "            （モデルに合わせ、品詞は落とさない様にする）\n",
+    "            （learning.core.nlang.Nlangの仕様に従い、\n",
+    "            　一部品詞が落とされます。）\n",
     "\n",
     "        warning:\n",
-    "            コーパスに含まれる単語が、\n",
+    "            Trueを指定時、コーパスに含まれる単語が\n",
     "            モデル内のWord2Vecボキャブラリにない場合、\n",
     "            警告を表示する\n",
     "    '''\n",
-    "    corpus = Nlang_naive.split(question).split()\n",
+    "    corpus = Nlang.split(question).split()\n",
     "    inferred_vector = model.infer_vector(corpus)\n",
     "    \n",
     "    if warning:\n",
@@ -343,15 +315,15 @@
     "collapsed": false,
     "deletable": true,
     "editable": true,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/30 PM 01:09:26 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/30 PM 01:09:27 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:30:48 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:30:48 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
@@ -363,16 +335,16 @@
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6896             13470.0    0.210352\n",
-      "1       6716             13286.0    0.155709\n",
-      "2       6988             13568.0    0.152977\n",
-      "3       6882             13456.0    0.145493\n",
-      "4       6820             13394.0    0.130865\n",
-      "5       6818             13392.0    0.129206\n",
-      "6       6950             13530.0    0.124946\n",
-      "7       6715             13285.0    0.123943\n",
-      "8       6785             13358.0    0.118327\n",
-      "9       6778             13351.0    0.116842\n"
+      "0       6976             13556.0    0.173428\n",
+      "1       6910             13484.0    0.162010\n",
+      "2       6949             13529.0    0.161308\n",
+      "3       6946             13525.0    0.160166\n",
+      "4       6738             13309.0    0.156441\n",
+      "5       6934             13513.0    0.152932\n",
+      "6       6892             13466.0    0.152278\n",
+      "7       6865             13439.0    0.145302\n",
+      "8       6779             13352.0    0.143245\n",
+      "9       6713             13283.0    0.143054\n"
      ]
     }
    ],
@@ -387,15 +359,16 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/30 PM 01:09:27 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/30 PM 01:09:27 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:30:48 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:30:48 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
@@ -405,16 +378,16 @@
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6749             13310.0    0.507852\n",
-      "1       6759             13331.0    0.478666\n",
-      "2       6766             13338.0    0.465102\n",
-      "3       6743             13314.0    0.442194\n",
-      "4       6856             13430.0    0.432483\n",
-      "5       6744             13316.0    0.414182\n",
-      "6       6863             13437.0    0.412427\n",
-      "7       6763             13335.0    0.411030\n",
-      "8       6851             13425.0    0.407822\n",
-      "9       6792             13367.0    0.397552\n"
+      "0       6856             13430.0    0.516781\n",
+      "1       6763             13335.0    0.505366\n",
+      "2       6888             13462.0    0.493470\n",
+      "3       6786             13359.0    0.463074\n",
+      "4       6744             13316.0    0.458465\n",
+      "5       6863             13437.0    0.455485\n",
+      "6       6762             13334.0    0.444064\n",
+      "7       6733             13304.0    0.439248\n",
+      "8       6824             13398.0    0.436261\n",
+      "9       6749             13310.0    0.433721\n"
      ]
     }
    ],
@@ -436,8 +409,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/30 PM 01:09:27 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/30 PM 01:09:27 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:30:48 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:30:48 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
@@ -447,16 +420,16 @@
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6710             13280.0    0.351464\n",
-      "1       6916             13495.0    0.348684\n",
-      "2       6775             13348.0    0.330269\n",
-      "3       6933             13512.0    0.327353\n",
-      "4       6807             13382.0    0.326287\n",
-      "5       6917             13496.0    0.325977\n",
-      "6       6787             13360.0    0.324090\n",
-      "7       6859             13433.0    0.323967\n",
-      "8       7021             13600.0    0.320636\n",
-      "9       6907             13481.0    0.320494\n"
+      "0       6787             13360.0    0.356194\n",
+      "1       6893             13467.0    0.354752\n",
+      "2       6799             13374.0    0.344399\n",
+      "3       6767             13339.0    0.338896\n",
+      "4       6772             13361.0    0.336147\n",
+      "5       6862             13436.0    0.324125\n",
+      "6       6796             13371.0    0.321354\n",
+      "7       6798             13373.0    0.320444\n",
+      "8       6900             13474.0    0.306015\n",
+      "9       6912             13489.0    0.305509\n"
      ]
     }
    ],
@@ -471,15 +444,16 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017/05/30 PM 01:09:28 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
-      "2017/05/30 PM 01:09:28 ['./fixtures/question_answers/toyotsu_human.csv']\n"
+      "2017/05/30 PM 01:30:49 ['./fixtures/learning_training_messages/benefitone.csv', './fixtures/learning_training_messages/ptna.csv', './fixtures/learning_training_messages/septeni.csv', './fixtures/learning_training_messages/toyotsu_human.csv']\n",
+      "2017/05/30 PM 01:30:49 ['./fixtures/question_answers/toyotsu_human.csv']\n"
      ]
     },
     {
@@ -489,16 +463,16 @@
       "count: my-ope all questions=317, document vectors=317 (features=200)\n",
       "count: question=1, document vectors=1 (features=200)\n",
       "   answer_id  question_answer_id  similarity\n",
-      "0       6909             13483.0    0.414760\n",
-      "1       6985             13565.0    0.286627\n",
-      "2       6871             13445.0    0.282477\n",
-      "3       6807             13382.0    0.275013\n",
-      "4       6853             13427.0    0.273209\n",
-      "5       6924             13503.0    0.271079\n",
-      "6       6773             13345.0    0.270750\n",
-      "7       6986             13566.0    0.270314\n",
-      "8       6738             13324.0    0.261917\n",
-      "9       6752             13305.0    0.261138\n"
+      "0       6909             13483.0    0.415835\n",
+      "1       6723             13294.0    0.410651\n",
+      "2       6956             13536.0    0.337485\n",
+      "3       6958             13538.0    0.315778\n",
+      "4       6980             13560.0    0.307432\n",
+      "5       6949             13529.0    0.304626\n",
+      "6       6988             13568.0    0.301286\n",
+      "7       7011             13591.0    0.300313\n",
+      "8       6957             13537.0    0.288305\n",
+      "9       6912             13488.0    0.283848\n"
      ]
     }
    ],
