影響箇所の修正

--- a/learning/prototype/better_algorithm/07-nosetests-checkpoint.ipynb
+++ b/learning/prototype/better_algorithm/07-nosetests-checkpoint.ipynb
@@ -229,7 +229,7 @@
     "----------------------------------------------------------------------\n",
     "Traceback (most recent call last):\n",
     "  File \"/Users/makmorit/GitHub/donusagi-bot/learning/learning/tests/engine/test_ptna_conversation.py\", line 62, in test_fail_blank\n",
-    "    result = Reply(self.bot_id, helper.learning_parameter()).perform(questions)\n",
+    "    result = Reply(self.bot_id, helper.learning_parameter(use_similarity_classification=False)).perform(questions)\n",
     "  File \"/Users/makmorit/GitHub/donusagi-bot/learning/learning/core/predict/reply.py\", line 17, in __init__\n",
     "    self.db = MySQLdb.connect(host=dbconfig['host'], db=dbconfig['name'], user=dbconfig['user'],\n",
     "NameError: name 'MySQLdb' is not defined\n",
@@ -426,7 +426,7 @@
     "        self.answers = helper.build_answers(self.csv_file_path)\n",
     "\n",
     "        # 学習処理は時間がかかるためmodelのdumpファイルを作ったらコメントアウトしてもテスト実行可能\n",
-    "        self.learning_parameter = helper.learning_parameter(algorithm=LearningParameter.ALGORITHM_NEURAL_NETWORK)\n",
+    "        self.learning_parameter = helper.learning_parameter(algorithm=LearningParameter.ALGORITHM_NEURAL_NETWORK, use_similarity_classification=False)\n",
     "        #_evaluator = Bot(self.bot_id, self.learning_parameter).learn(csv_file_path=self.csv_file_path)\n",
     "\n",
     "    def test_hope_female_teacher(self):\n",
