--- a/learning/prototype/evaluate_estimator/research-septeni-stop-problem-02.ipynb
+++ b/learning/prototype/evaluate_estimator/research-septeni-stop-problem-02.ipynb
@@ -293,7 +293,7 @@
     "from learning.tests import helper\n",
     "\n",
     "questions = ['やめる']\n",
-    "result = Reply(bot_id, helper.learning_parameter()).perform(questions, datasource_type='csv')\n",
+    "result = Reply(bot_id, helper.learning_parameter(use_similarity_classification=False)).perform(questions, datasource_type='csv')\n",
     "result"
    ]
   },
