--- a/learning/prototype/evaluate_estimator/research-septeni-stop-problem-03.ipynb
+++ b/learning/prototype/evaluate_estimator/research-septeni-stop-problem-03.ipynb
@@ -992,7 +992,7 @@
    ],
    "source": [
     "questions = ['やめる'] # 回答候補＝２件\n",
-    "Reply(bot_id, helper.learning_parameter()).perform(questions, datasource_type='csv')"
+    "Reply(bot_id, helper.learning_parameter(use_similarity_classification=False)).perform(questions, datasource_type='csv')"
    ]
   },
   {
@@ -1044,7 +1044,7 @@
    ],
    "source": [
     "questions = ['どうにか'] # 回答候補＝１件\n",
-    "Reply(bot_id, helper.learning_parameter()).perform(questions, datasource_type='csv')"
+    "Reply(bot_id, helper.learning_parameter(use_similarity_classification=False)).perform(questions, datasource_type='csv')"
    ]
   },
   {
@@ -1096,7 +1096,7 @@
    ],
    "source": [
     "questions = ['ドライブ'] # 回答候補＝５件\n",
-    "Reply(bot_id, helper.learning_parameter()).perform(questions, datasource_type='csv')"
+    "Reply(bot_id, helper.learning_parameter(use_similarity_classification=False)).perform(questions, datasource_type='csv')"
    ]
   }
  ],
