パラメータ調整してみた

--- a/learning/prototype/LSI_in_sckit_learn.ipynb
+++ b/learning/prototype/LSI_in_sckit_learn.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +678,7 @@
        " '育休 何 年 とれる']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -727,26 +727,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['保険証 失 くい']\n"
+      "['保険証 ない する']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['保険証 ない する']"
+       "['保険証 失 くい']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_sentences = np.array(['保険証失くした'])\n",
+    "target_sentences = np.array(['保険証なくした'])\n",
     "target_separated_sentences = Nlang.batch_split(target_sentences)\n",
     "target_features = vectorizer.transform(target_separated_sentences)\n",
     "print(target_separated_sentences)\n",
-    "target_sentences2 = np.array(['保険証なくした'])\n",
+    "target_sentences2 = np.array(['保険証失くした'])\n",
     "target_separated_sentences2 = Nlang.batch_split(target_sentences2)\n",
     "target_features2 = vectorizer.transform(target_separated_sentences2)\n",
     "target_separated_sentences2"
@@ -761,7 +761,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.53408321406997084, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
+       " (0.49964333210885781,\n",
+       "  '豊田通商 健保 任意 継続 する 保険証 いつ 届く 届く 保険証',\n",
+       "  '豊田通商健保を任意継続したが、保険証はいつ届くの？\\u3000届くまでの保険証は？'),\n",
+       " (0.48267399886826184, '保険証 盗む れる', '保険証が盗まれた'),\n",
+       " (0.39798431033064546, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
+       " (0.36713042709999311,\n",
+       "  'すぐ 病院 行く 保険証 忘れる どう する いい',\n",
+       "  'すぐに病院へ行きたいが保険証を忘れた、どうすればいいの？'),\n",
+       " (0.2541693169394203, 'わかる ない', 'わからない'),\n",
+       " (0.2541693169394203, '特に ない', '特にない'),\n",
+       " (0.22372542796563233,\n",
+       "  '国内 出張 規定 のる ない 確認 する 海外 出張 フライト 東京 発 東京 移動 する 泊 する 場合 国内 日当 申請 する ない 理解',\n",
+       "  '国内出張規定にものっていないので確認したいのですが\\n海外出張のフライトが東京発であったため東京へ移動し、前泊した場合\\n国内の日当は申請しないという理解であってるか？\\n'),\n",
+       " (0.20184168223730012, '引越 先 決まる ない どう する いい', '引越先が決まっていないが、どうしたらいいか。'),\n",
+       " (0.18933582019033379,\n",
+       "  '海外 出張 申請 する 料金 負担 ない ０ 円 計算 書 提出 する',\n",
+       "  '海外出張申請したが、料金負担はなし（0円）でも、計算書は提出するの？')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similarities = cosine_similarity(features, target_features)\n",
+    "similarities = similarities.flatten()\n",
+    "zipped_data = zip(similarities, separated_sentences, np.array(df['question']))\n",
+    "list(sorted(zipped_data, key=lambda x: x[0], reverse=True))[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -791,49 +833,7 @@
        " (0.0, '財形 貯蓄 財形 住宅 新規 募集 時期 いる', '財形貯蓄・財形住宅の新規募集時期はいつですか？')]"
       ]
      },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarities = cosine_similarity(features, target_features)\n",
-    "similarities = similarities.flatten()\n",
-    "zipped_data = zip(similarities, separated_sentences, np.array(df['question']))\n",
-    "list(sorted(zipped_data, key=lambda x: x[0], reverse=True))[0:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0.53408321406997084, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
-       " (0.49964333210885781,\n",
-       "  '豊田通商 健保 任意 継続 する 保険証 いつ 届く 届く 保険証',\n",
-       "  '豊田通商健保を任意継続したが、保険証はいつ届くの？\\u3000届くまでの保険証は？'),\n",
-       " (0.48267399886826184, '保険証 盗む れる', '保険証が盗まれた'),\n",
-       " (0.39798431033064546, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
-       " (0.36713042709999311,\n",
-       "  'すぐ 病院 行く 保険証 忘れる どう する いい',\n",
-       "  'すぐに病院へ行きたいが保険証を忘れた、どうすればいいの？'),\n",
-       " (0.2541693169394203, 'わかる ない', 'わからない'),\n",
-       " (0.2541693169394203, '特に ない', '特にない'),\n",
-       " (0.22372542796563233,\n",
-       "  '国内 出張 規定 のる ない 確認 する 海外 出張 フライト 東京 発 東京 移動 する 泊 する 場合 国内 日当 申請 する ない 理解',\n",
-       "  '国内出張規定にものっていないので確認したいのですが\\n海外出張のフライトが東京発であったため東京へ移動し、前泊した場合\\n国内の日当は申請しないという理解であってるか？\\n'),\n",
-       " (0.20184168223730012, '引越 先 決まる ない どう する いい', '引越先が決まっていないが、どうしたらいいか。'),\n",
-       " (0.18933582019033379,\n",
-       "  '海外 出張 申請 する 料金 負担 ない ０ 円 計算 書 提出 する',\n",
-       "  '海外出張申請したが、料金負担はなし（0円）でも、計算書は提出するの？')]"
-      ]
-     },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,13 +854,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "lsa = TruncatedSVD(n_components=700)\n",
+    "lsa = TruncatedSVD(n_components=583, algorithm='arpack')\n",
     "lsa_features = lsa.fit_transform(features)\n",
     "normalizer = Normalizer(copy=False)\n",
     "lsa_features = normalizer.fit_transform(lsa_features)"
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -894,9 +894,9 @@
       "(584, 1097)\n",
       "(1, 1097)\n",
       "(1, 1097)\n",
-      "(584, 584)\n",
-      "(1, 584)\n",
-      "(1, 584)\n"
+      "(584, 583)\n",
+      "(1, 583)\n",
+      "(1, 583)\n"
      ]
     }
    ],
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -929,27 +929,27 @@
     {
      "data": {
       "text/plain": [
-       "[(0.60352020324832711, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
-       " (0.60312259103462662, '保険証 盗む れる', '保険証が盗まれた'),\n",
-       " (0.5929645723510848,\n",
+       "[(0.5433878161367105, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
+       " (0.50834793517088905,\n",
        "  '豊田通商 健保 任意 継続 する 保険証 いつ 届く 届く 保険証',\n",
        "  '豊田通商健保を任意継続したが、保険証はいつ届くの？\\u3000届くまでの保険証は？'),\n",
-       " (0.49729906520873385, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
-       " (0.41486162482725908,\n",
+       " (0.49108296842416127, '保険証 盗む れる', '保険証が盗まれた'),\n",
+       " (0.40491784716325524, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
+       " (0.37352643888386178,\n",
        "  'すぐ 病院 行く 保険証 忘れる どう する いい',\n",
        "  'すぐに病院へ行きたいが保険証を忘れた、どうすればいいの？'),\n",
-       " (0.00058656720305908818, '', 'ありません'),\n",
-       " (9.0205620750793969e-16,\n",
-       "  '社宅 寮 利用 料 日割り 計算 する れる',\n",
-       "  '社宅・寮について、利用料は日割り計算されるのか？'),\n",
-       " (7.7368667028565596e-16, '豊田通商 ＤＢ 受け取り 方法 一時 金 年金', '豊田通商DBの受け取り方法は、一時金？年金？'),\n",
-       " (6.6439909129911712e-16,\n",
-       "  '所属 部 付 なる 海外 出張 申請 申請 する 申請 画面 上 ＧＬ 承認 入力 必要 なる 直属 上司 部長 ＧＬ 不在 状況 申請 方法 教示 願',\n",
-       "  '所属が「部付」となり、海外出張申請を申請すると、申請画面上【ＧＬ承認の入力必要】となります。 直属の上司は、部長のため、ＧＬ不在の状況です。申請方法をご教示願ます。'),\n",
-       " (5.8460181140418399e-16, '精算 届 入力 する 合計 欄 反映 する れる', '精算届を入力しても、合計欄に反映されません')]"
+       " (0.25859736165116926, 'わかる ない', 'わからない'),\n",
+       " (0.2585973616511692, '特に ない', '特にない'),\n",
+       " (0.22762309039836023,\n",
+       "  '国内 出張 規定 のる ない 確認 する 海外 出張 フライト 東京 発 東京 移動 する 泊 する 場合 国内 日当 申請 する ない 理解',\n",
+       "  '国内出張規定にものっていないので確認したいのですが\\n海外出張のフライトが東京発であったため東京へ移動し、前泊した場合\\n国内の日当は申請しないという理解であってるか？\\n'),\n",
+       " (0.20535809407018243, '引越 先 決まる ない どう する いい', '引越先が決まっていないが、どうしたらいいか。'),\n",
+       " (0.19263435947679808,\n",
+       "  '海外 出張 申請 する 料金 負担 ない ０ 円 計算 書 提出 する',\n",
+       "  '海外出張申請したが、料金負担はなし（0円）でも、計算書は提出するの？')]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -971,27 +971,25 @@
     {
      "data": {
       "text/plain": [
-       "[(0.54325367995001361, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
-       " (0.50822244863712007,\n",
+       "[(0.60383743131869716, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
+       " (0.60343961010825653, '保険証 盗む れる', '保険証が盗まれた'),\n",
+       " (0.59327625206962986,\n",
        "  '豊田通商 健保 任意 継続 する 保険証 いつ 届く 届く 保険証',\n",
        "  '豊田通商健保を任意継続したが、保険証はいつ届くの？\\u3000届くまでの保険証は？'),\n",
-       " (0.49096174377616525, '保険証 盗む れる', '保険証が盗まれた'),\n",
-       " (0.40481789251883499, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
-       " (0.37343423326081504,\n",
+       " (0.49756046030703222, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
+       " (0.41507968836847337,\n",
        "  'すぐ 病院 行く 保険証 忘れる どう する いい',\n",
        "  'すぐに病院へ行きたいが保険証を忘れた、どうすればいいの？'),\n",
-       " (0.25853352646209804, 'わかる ない', 'わからない'),\n",
-       " (0.25853352646209793, '特に ない', '特にない'),\n",
-       " (0.22756690125969409,\n",
-       "  '国内 出張 規定 のる ない 確認 する 海外 出張 フライト 東京 発 東京 移動 する 泊 する 場合 国内 日当 申請 する ない 理解',\n",
-       "  '国内出張規定にものっていないので確認したいのですが\\n海外出張のフライトが東京発であったため東京へ移動し、前泊した場合\\n国内の日当は申請しないという理解であってるか？\\n'),\n",
-       " (0.20530740108291301, '引越 先 決まる ない どう する いい', '引越先が決まっていないが、どうしたらいいか。'),\n",
-       " (0.19258680736458633,\n",
-       "  '海外 出張 申請 する 料金 負担 ない ０ 円 計算 書 提出 する',\n",
-       "  '海外出張申請したが、料金負担はなし（0円）でも、計算書は提出するの？')]"
+       " (0.043548243988311967, '', 'またね'),\n",
+       " (0.029398784527576667, '', 'ありません'),\n",
+       " (3.9928444789900973e-16, '通勤 費 申告 いつ 申請 する いい', '通勤費申告はいつまでに申請すればいいか'),\n",
+       " (3.9458131747952694e-16,\n",
+       "  '海外 出張 申請 ２つ 出張 間 １ 日 ない 出張 申請 ２ 件 作成 する',\n",
+       "  '海外出張申請について、２つの出張の間に1日しかない。それでも出張申請は２件作成すべきか？'),\n",
+       " (3.7025711389392841e-16, 'おはよう', 'おはようございます')]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,6 +1004,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## パラメータ調整\n",
+    "\n",
+    "http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.TruncatedSVD.html\n",
+    "\n",
+    "を参考にパラメータを調整してみた。\n",
+    "\n",
+    "- n_components: \n",
+    "  - 推奨されている100だと意図した結果にならない(盗まれるが一致してしまう)、この傾向は、400くらいまで同じ、「失くす」と「盗まれる」が「失くす」と「紛失する」よりも近いカテゴリになってしまうようだ。この値を近づけていくと、コサイン類似のみのときの結果に近づくので、featureの数くらいが良さそう(設定できる最大)\n",
+    "- algorithm:\n",
+    "  - よくわかっていないが、arpackのほうがsimilalityが高い気がする\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
