LDAも試して比較

--- a/learning/prototype/LSI_in_sckit_learn.ipynb
+++ b/learning/prototype/LSI_in_sckit_learn.ipynb
@@ -929,22 +929,22 @@
     {
      "data": {
       "text/plain": [
-       "[(0.5433878161367105, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
-       " (0.50834793517088905,\n",
+       "[(0.54332749140837444, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
+       " (0.50829150042911053,\n",
        "  '豊田通商 健保 任意 継続 する 保険証 いつ 届く 届く 保険証',\n",
        "  '豊田通商健保を任意継続したが、保険証はいつ届くの？\\u3000届くまでの保険証は？'),\n",
-       " (0.49108296842416127, '保険証 盗む れる', '保険証が盗まれた'),\n",
-       " (0.40491784716325524, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
-       " (0.37352643888386178,\n",
+       " (0.49102845036950332, '保険証 盗む れる', '保険証が盗まれた'),\n",
+       " (0.40487289481356459, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
+       " (0.37348497148197496,\n",
        "  'すぐ 病院 行く 保険証 忘れる どう する いい',\n",
        "  'すぐに病院へ行きたいが保険証を忘れた、どうすればいいの？'),\n",
-       " (0.25859736165116926, 'わかる ない', 'わからない'),\n",
-       " (0.2585973616511692, '特に ない', '特にない'),\n",
-       " (0.22762309039836023,\n",
+       " (0.25856865321287403, 'わかる ない', 'わからない'),\n",
+       " (0.25856865321287403, '特に ない', '特にない'),\n",
+       " (0.22759782059899505,\n",
        "  '国内 出張 規定 のる ない 確認 する 海外 出張 フライト 東京 発 東京 移動 する 泊 する 場合 国内 日当 申請 する ない 理解',\n",
        "  '国内出張規定にものっていないので確認したいのですが\\n海外出張のフライトが東京発であったため東京へ移動し、前泊した場合\\n国内の日当は申請しないという理解であってるか？\\n'),\n",
-       " (0.20535809407018243, '引越 先 決まる ない どう する いい', '引越先が決まっていないが、どうしたらいいか。'),\n",
-       " (0.19263435947679808,\n",
+       " (0.20533529604109807, '引越 先 決まる ない どう する いい', '引越先が決まっていないが、どうしたらいいか。'),\n",
+       " (0.19261297398551816,\n",
        "  '海外 出張 申請 する 料金 負担 ない ０ 円 計算 書 提出 する',\n",
        "  '海外出張申請したが、料金負担はなし（0円）でも、計算書は提出するの？')]"
       ]
@@ -971,22 +971,22 @@
     {
      "data": {
       "text/plain": [
-       "[(0.60383743131869716, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
-       " (0.60343961010825653, '保険証 盗む れる', '保険証が盗まれた'),\n",
-       " (0.59327625206962986,\n",
+       "[(0.60367507619306882, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
+       " (0.60327736194571013, '保険証 盗む れる', '保険証が盗まれた'),\n",
+       " (0.59311673655197372,\n",
        "  '豊田通商 健保 任意 継続 する 保険証 いつ 届く 届く 保険証',\n",
        "  '豊田通商健保を任意継続したが、保険証はいつ届くの？\\u3000届くまでの保険証は？'),\n",
-       " (0.49756046030703222, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
-       " (0.41507968836847337,\n",
+       " (0.49742668010916608, '保険証 印字 薄い なる', '保険証の印字が薄くなった'),\n",
+       " (0.41496808496090781,\n",
        "  'すぐ 病院 行く 保険証 忘れる どう する いい',\n",
        "  'すぐに病院へ行きたいが保険証を忘れた、どうすればいいの？'),\n",
-       " (0.043548243988311967, '', 'またね'),\n",
-       " (0.029398784527576667, '', 'ありません'),\n",
-       " (3.9928444789900973e-16, '通勤 費 申告 いつ 申請 する いい', '通勤費申告はいつまでに申請すればいいか'),\n",
-       " (3.9458131747952694e-16,\n",
+       " (0.043536535074195484, '', 'またね'),\n",
+       " (0.029390880010387553, '', 'ありません'),\n",
+       " (4.1951981570595394e-16,\n",
        "  '海外 出張 申請 ２つ 出張 間 １ 日 ない 出張 申請 ２ 件 作成 する',\n",
        "  '海外出張申請について、２つの出張の間に1日しかない。それでも出張申請は２件作成すべきか？'),\n",
-       " (3.7025711389392841e-16, 'おはよう', 'おはようございます')]"
+       " (3.701575620325745e-16, 'おはよう', 'おはようございます'),\n",
+       " (3.5094845757736827e-16, '通勤 費 申告 いつ 申請 する いい', '通勤費申告はいつまでに申請すればいいか')]"
       ]
      },
      "execution_count": 13,
@@ -1015,6 +1015,177 @@
     "  - 推奨されている100だと意図した結果にならない(盗まれるが一致してしまう)、この傾向は、400くらいまで同じ、「失くす」と「盗まれる」が「失くす」と「紛失する」よりも近いカテゴリになってしまうようだ。この値を近づけていくと、コサイン類似のみのときの結果に近づくので、featureの数くらいが良さそう(設定できる最大)\n",
     "- algorithm:\n",
     "  - よくわかっていないが、arpackのほうがsimilalityが高い気がする\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LDAも試してみる\n",
+    "\n",
+    "試せそうだったので `LDA_in_scikit_learn_xx.ipynb` あたりを参考にLDAを試して比較してみた。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import LatentDirichletAllocation\n",
+    "\n",
+    "lda = LatentDirichletAllocation(n_topics=584, \n",
+    "                                max_iter=5,\n",
+    "                                learning_method='online')\n",
+    "\n",
+    "\n",
+    "lda_features = lda.fit_transform(features)\n",
+    "lda_features = normalizer.fit_transform(lda_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lda_target_features = lda.transform(target_features)\n",
+    "lda_target_features = normalizer.transform(lda_target_features)\n",
+    "lda_target_features2 = lda.transform(target_features2)\n",
+    "lda_target_features2 = normalizer.transform(lda_target_features2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(584, 1097)\n",
+      "(1, 1097)\n",
+      "(1, 1097)\n",
+      "(584, 584)\n",
+      "(1, 584)\n",
+      "(1, 584)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LDA無し\n",
+    "print(features.shape)\n",
+    "print(target_features.shape)\n",
+    "print(target_features2.shape)\n",
+    "\n",
+    "# LDAあり\n",
+    "print(lda_features.shape)\n",
+    "print(lda_target_features.shape)\n",
+    "print(lda_target_features2.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## コサイン類似検索をかけてみる(LDAあり)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.99999849529189011, '今日 いい 天気', '今日はいい天気ですね'),\n",
+       " (0.99999461468407291, '旅行 好き', '旅行は好きですか？'),\n",
+       " (0.99999460987754341, '今日 天気', '今日のお天気は'),\n",
+       " (0.99999460987754341, '今日 天気', '今日の天気は？'),\n",
+       " (0.9999944299492366, '今日 予定', '今日の予定は？'),\n",
+       " (0.99999431172756847, '猫 好き', '猫は好き'),\n",
+       " (0.99999173805029262, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
+       " (0.99999074679523214, '特に ない', '特にない'),\n",
+       " (0.99998626090971121, '指定 旅行 代理 店', '指定旅行代理店は？'),\n",
+       " (0.99991846541412988,\n",
+       "  '駐在 予定 中国 指定 健 診る 受診 する 渡航 健 診る 受ける ない いい',\n",
+       "  '駐在予定ですが、中国指定の健診を受診したら、渡航前健診は受けなくてもいいですか？')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda_similarities = cosine_similarity(lda_features, lda_target_features)\n",
+    "lda_similarities = lda_similarities.flatten()\n",
+    "zipped_data = zip(lda_similarities, separated_sentences, np.array(df['question']))\n",
+    "list(sorted(zipped_data, key=lambda x: x[0], reverse=True))[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## コサイン類似検索をかけてみる(LDAあり)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.99993911131599322, '特に ない', '特にない'),\n",
+       " (0.99992842840039509, '猫 好き', '猫は好き'),\n",
+       " (0.99992800591235032, '今日 予定', '今日の予定は？'),\n",
+       " (0.99992735225126572, '今日 天気', '今日のお天気は'),\n",
+       " (0.99992735225126572, '今日 天気', '今日の天気は？'),\n",
+       " (0.9999273346326788, '旅行 好き', '旅行は好きですか？'),\n",
+       " (0.99985427973438534, '今日 いい 天気', '今日はいい天気ですね'),\n",
+       " (0.99981178508187196, '健康 保険証 紛失 する', '健康保険証を紛失した'),\n",
+       " (0.9997882573249316, '指定 旅行 代理 店', '指定旅行代理店は？'),\n",
+       " (0.99960502094601422,\n",
+       "  '駐在 予定 中国 指定 健 診る 受診 する 渡航 健 診る 受ける ない いい',\n",
+       "  '駐在予定ですが、中国指定の健診を受診したら、渡航前健診は受けなくてもいいですか？')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda_similarities = cosine_similarity(lda_features, lda_target_features2)\n",
+    "lda_similarities = lda_similarities.flatten()\n",
+    "zipped_data = zip(lda_similarities, separated_sentences, np.array(df['question']))\n",
+    "list(sorted(zipped_data, key=lambda x: x[0], reverse=True))[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "パラメータ調整\n",
+    "http://scikit-learn.org/stable/modules/generated/sklearn.decomposition.LatentDirichletAllocation.html\n",
+    "を参考にパラメータを調整してみた。\n",
+    "\n",
+    "何か間違っているのかもしれないが、色々調整してみても、上記のように全く予測できていない。"
    ]
   },
   {
