コメント追加

--- a/learning/prototype/LSI_in_sckit_learn.ipynb
+++ b/learning/prototype/LSI_in_sckit_learn.ipynb
@@ -1023,7 +1023,21 @@
    "source": [
     "# LDAも試してみる\n",
     "\n",
-    "試せそうだったので `LDA_in_scikit_learn_xx.ipynb` あたりを参考にLDAを試して比較してみた。"
+    "試せそうだったので `LDA_in_scikit_learn_xx.ipynb` あたりを参考にLDAを試して比較してみた。\n",
+    "\n",
+    "http://hivecolor.com/id/65\n",
+    "\n",
+    "によると、\n",
+    "\n",
+    "> LSIもLDAも、次元をトピック単位に縮約するのは同じでした。lsiコーパスとldaコーパスの値もほとんど同じです。ただ、全く同じではなく、LSIとLDAには、「確率的な揺らぎを考慮するかどうか」という違いがあります。\n",
+    "\n",
+    "> LSIでは、一緒に使われている単語であれば、そのうち片方の単語で検索すると、もう片方の単語の結果も見付かることをちょっと前に書きました。しかしながら、どれだけ意味が似ている単語であっても、一緒に使われていなければそういう検索はできないという弱点があります。\n",
+    "\n",
+    "> LDAでは、LSIに確率分布を取り入れることで、直接的には一緒に使われていない単語同士であっても検索で見付けることができるようになります。\n",
+    "\n",
+    "> これまた詳しくないので詳細な説明はできないのですが、利用者の立場としては、LSIの発展版がLDAだ、くらいに思っておけばいいんじゃないかと思います。\n",
+    "\n",
+    "のように書いてあります。"
    ]
   },
   {
